# poem-2

./: CHANGELOG.md  Jenkinsfile  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  requirements_tests.txt  setup.py  version.py
cron/: db-backup  poem-clearsessions  poem-db_backup  poem-sync  poem-syncvosf
doc/: mkdocs.yml  poem.md  superadmin_administration.md  superadmin_login.md  superadmin_metric_templates.md  superadmin_packages.md  superadmin_probe.md  superadmin_repos.md  superadmin_users.md  tenant_administration.md  tenant_aggregation_profiles.md  tenant_groups_of_resources.md  tenant_metric_profiles.md  tenant_metric_templates.md  tenant_metrics.md  tenant_probes.md  tenant_services.md  tenant_thresholds_profiles.md  tenant_users.md
doc/docs/: index.md  superadmin_administration.md  superadmin_metric_templates.md  superadmin_packages.md  superadmin_probe.md  superadmin_repos.md  superadmin_users.md  tenant_administration.md  tenant_aggregation_profiles.md  tenant_groups_of_resources.md  tenant_metric_profiles.md  tenant_metric_templates.md  tenant_metrics.md  tenant_probes.md  tenant_services.md  tenant_thresholds_profiles.md  tenant_users.md
doc/v1/: mkdocs.yml
doc/v1/docs/: index.md  superadmin_administration.md  superadmin_default_ports.md  superadmin_guide.md  superadmin_metric_tags.md  superadmin_metric_templates.md  superadmin_packages.md  superadmin_probe.md  superadmin_repos.md  superadmin_tenants.md  superadmin_ui.md  superadmin_users.md  tenant_administration.md  tenant_aggregation_profiles.md  tenant_apikey.md  tenant_groups_of_resources.md  tenant_guide.md  tenant_metric_overrides.md  tenant_metric_profiles.md  tenant_metric_templates.md  tenant_metrics.md  tenant_operations_profiles.md  tenant_packages.md  tenant_probe_candidates.md  tenant_probes.md  tenant_reports.md  tenant_servicetypes.md  (+3 more)
docker/: .env  .env.sample  Dockerfile  Dockerfile.systemd  chezmoi-config-apply.sh  collectstatic.sh  docker-compose.yml  docker-run-poem-r9.sh  entrypoint.sh  podman-run-sinit-poem-r9.sh  poem.conf  pypath.sh  restarthttpd.sh  run-django-server.sh  run-frontdev-server.sh  safety.sh  scl-psql.sh  setup.sh  syncsite.sh
docker/apache/: poem-apache.ini
etc/: poem.conf  poem.conf.template  poem_logging.conf
helpers/: aggregation_history_helper.py  datadump-helper.py  metric_json_helper.py  metricprofile_history_helper.py  new_history_handling_helper.py  react-poem-datadump-helper.py  react-poem-metric-history-helper.py  react-poem-metric-template-history-datadump-helper.py  refactor-serialization-helper.py  thresholds_profile_initial_history_helper.py
logrotate.d/: poem-db_backup
poem/Poem/: .babelrc  .eslintrc.js  Makefile  django_logging.py  keep-latest-bundle.sh  keep-latest-mainbundle.sh  manage.py  package-lock.json  package.json  requirements.txt  server.js  settings-devserver.py  settings.py  urls.py  webpack-stats.json  webpack.config.js  webpack.devserver.config.js
poem/apache/: poem.conf  poem.wsgi
poem/frontend/: package-lock.json
testenv/: .env  Dockerfile  Dockerfile.poem-react-tests  docker-compose.yml  docker-run-poem-tests.sh  entrypoint.sh  execute-backend-tests.sh  execute-frontend-tests.sh  execute-tests  manage.py  poem-install.sh  poem.conf  poem_logging.conf  secret_key  settings.py  setup_test.sh  venv_poem.sh
testenv/apache/: poem-apache.ini  poem.conf
(+464 files in other folders)
